# 3d-renderer

./: CMakeLists.txt  LICENSE  README.md  TODO.md
src/: app.c  app.h  main.c  obj_parser.c  obj_parser.h  point_math.c  point_math.h  render.c  render.h
